# yttrium2

./: Doxyfile  README.md
src/: CMakeLists.txt
src/chemical/: CMakeLists.txt
src/chemical/ionocell/: CMakeLists.txt  diffusion-coefficient-table.js  diffusion-coefficients.js  ionocell.cpp  ionocell.hpp  ionocell.py  sign.sh  spyndle.py
src/chemical/tests/: CMakeLists.txt  main.cpp  test-lib.cpp  test-plexus.cpp  test-solve1d.cpp  test-species.cpp  test-weasel.cpp
src/chemical/y/chemical/: equilibrium.cpp  equilibrium.hpp  formula.cpp  formula.hpp  library.cpp  library.hpp  species.cpp  species.hpp  weasel.cpp  weasel.hpp
src/cli/: CMakeLists.txt  y_chemsys.cpp  y_embed.cpp  y_mp_missing.cpp  y_rgb.cpp  y_trunc.cpp
src/core/: CMakeLists.txt
src/core/tests/: CMakeLists.txt  main.cpp  main.hpp  test-decimal.cpp  test-exception.cpp  test-functor.cpp  test-graphviz.cpp  test-hexadecimal.cpp  test-singleton.cpp  test-static-init.cpp
src/core/tests/antelope/: add.cpp
src/core/tests/apex/: block.cpp  blocks.cpp  device.cpp  integer.cpp  io.cpp  model.cpp  natural.cpp  parcel.cpp  parcels.cpp  perf.cpp  rational.cpp  ratsimp.cpp  rsa.cpp  simplify.cpp
src/core/tests/ascii/: convert.cpp
src/core/tests/calculus/: alignment.cpp  base10.cpp  base2.cpp  bits-for.cpp  bits-in.cpp  bytes-for.cpp  disperse.cpp  find-prime.cpp  gcd.cpp  iabs.cpp  integer-log2.cpp  isqrt.cpp  primes.cpp
src/core/tests/cameo/: add.cpp  caddy.cpp  mul.cpp
src/core/tests/color/: colors.cpp
src/core/tests/concurrent/: box.cpp  condition.cpp  dead-pool.cpp  diag.cpp  div1d.cpp  div2d.cpp  giant-lock.cpp  inferno.cpp  inventory.cpp  invoke.cpp  life-time.cpp  loop.cpp  member.cpp  memory.cpp  mutex.cpp  nucleus.cpp  pipeline.cpp  q.cpp  simd.cpp  site.cpp  spawn.cpp  split1d.cpp  split2d.cpp  thread.cpp  worker.cpp
src/core/tests/container/: algo.cpp  associative.cpp  cxx-array.cpp  cxx-series.cpp  data-book.cpp  disperse.cpp  echelon.cpp  hash-map.cpp  hash-set.cpp  htable.cpp  iterator.cpp  list.cpp  matrix.cpp  pqueue.cpp  static-pqueue.cpp  suffix-map.cpp  suffix-set.cpp  suffix-tree.cpp  vector.cpp
src/core/tests/core/: linked.cpp  variadic.cpp
src/core/tests/counting/: comb.cpp  combination.cpp  nested.cpp  part.cpp  partition.cpp  perm.cpp  permutation.cpp
src/core/tests/coven/: indx.cpp  max.cpp  space.cpp  tribes.cpp
src/core/tests/dft/: core.cpp  fmt.cpp  mul.cpp  mul2.cpp  nd.cpp
src/core/tests/field/: 1d.cpp  2d.cpp  3d.cpp  4d.cpp  layout.cpp
src/core/tests/format/: binary.cpp  decimal.cpp  hexadecimal.cpp  human-readable.cpp  justify.cpp
src/core/tests/hashing/: digest.cpp  functions.cpp  hash32.cpp  hmac.cpp  kmix.cpp  mix64.cpp  perfect.cpp
src/core/tests/information/: alphabet.cpp  arc4.cpp  bwt-mtf.cpp  bwt-rle.cpp  bwt.cpp  entropy.cpp  huffenc.cpp  huffman.cpp  rle-compress.cpp  stream.cpp
src/core/tests/memory/: arena.cpp  blocks.cpp  book.cpp  buffer-out-of.cpp  chunk.cpp  dead-pool.cpp  dyadic.cpp  dyads.cpp  gc.cpp  inferno.cpp  netherworld.cpp  object.cpp  operative.cpp  pages.cpp  pooled.cpp  quanta.cpp  school-of.cpp  static-buffer.cpp  studio.cpp  system.cpp  workspace.cpp
src/core/tests/mkl/: adaptor.cpp  almost-equal.cpp  api.cpp  fcpu.cpp  leap.cpp  mod2.cpp  numeric.cpp  triplet.cpp  v2d.cpp  xreal.cpp
src/core/tests/protean/: bare-heavy-list.cpp  bare-light-list.cpp  coop-heavy-list.cpp  coop-light-list.cpp  direct-cache.cpp  list.cpp  solo-heavy-list.cpp  solo-light-list.cpp
src/core/tests/ptr/: arc.cpp  auto.cpp  keyed.cpp
src/core/tests/random/: bits.cpp  fill.cpp  gaussian.cpp  in2d.cpp  in3d.cpp  shuffle.cpp
src/core/tests/rtld/: dll.cpp
src/core/tests/sorting/: heap.cpp  index.cpp
src/core/tests/static/: moniker.cpp  multiple.cpp  replica.cpp  solitary.cpp
src/core/tests/stream/: bits.cpp  bzip2-read.cpp  bzip2-write.cpp  char.cpp  gets.cpp  gzip-write.cpp  gzip.cpp  input-file.cpp  misc.cpp  output-file.cpp  output-queue.cpp  proc.cpp  queue.cpp  xmlog.cpp
src/core/tests/string/: env-conv.cpp  env.cpp  percent.cpp  stride.cpp  string.cpp
src/core/tests/system/: at-exit.cpp  error.cpp  hardware.cpp  rand.cpp  rtti.cpp  wall-time.cpp
src/core/y/: binary.cpp  binary.hpp  container.cpp  container.hpp  counted.cpp  counted.hpp  decimal.cpp  decimal.hpp  exception.cpp  exception.hpp  functor.hpp  hexadecimal.cpp  hexadecimal.hpp  latchable.cpp  latchable.hpp  lockable.cpp  lockable.hpp  object.cpp  object.hpp  ostream-proto.hpp  singleton.hpp  string.hpp
src/dll/: CMakeLists.txt  cxxmod.cpp  loader.cpp  module.c
src/fltk/: CMakeLists.txt
src/ink/: CMakeLists.txt
src/ink/tests/: CMakeLists.txt  main.cpp  test-bitmap.cpp  test-blur.cpp  test-broker.cpp  test-diff.cpp  test-draw.cpp  test-edge.cpp  test-filter.cpp  test-fmt.cpp  test-grad.cpp  test-hist.cpp  test-io.cpp  test-max.cpp  test-ops.cpp  test-pixel.cpp  test-pixmap.cpp  test-zflux.cpp
src/jive/: CMakeLists.txt
src/jive/tests/: CMakeLists.txt  main.cpp  test-eval.cpp  test-fc.cpp  test-formula.cpp  test-grammar.cpp  test-lexer.cpp  test-matching.cpp  test-parser.cpp  test-pattern.cpp  test-posix.cpp  test-rx.cpp  test-scanner.cpp  test-source.cpp  test-tag.cpp  test-vfs.cpp  test-xnode.cpp
src/json/: CMakeLists.txt
src/json/tests/: CMakeLists.txt  main.cpp  test-compiler.cpp
src/lua++/: CMakeLists.txt
src/lua++/tests/: CMakeLists.txt  test-function.cpp
src/mkl/: CMakeLists.txt
src/mkl/tests/: CMakeLists.txt  main.cpp  test-interval.cpp  test-intervals.cpp
src/mpi++/: CMakeLists.txt
src/mpi++/tests/: CMakeLists.txt  main.cpp  test-excp.cpp  test-init.cpp  test-p2p.cpp
src/python/: CMakeLists.txt  ctypes.py  loader.py  simple.cpp  simple.py  spyndle.cpp  spyndle.py  typyc.cpp
src/y/: CMakeLists.txt
src/y/bzip2/: CMakeLists.txt  bzip2.c  bzlib.c
src/y/jbig/: CMakeLists.txt
src/y/jpeg/: CMakeLists.txt
src/y/lua/: CMakeLists.txt
src/y/png/: CMakeLists.txt
src/y/sqlite3/: CMakeLists.txt
src/y/tiff/: CMakeLists.txt
src/y/z/: CMakeLists.txt  configure.cmake  zlib.cmake
src/y/zlib/: CMakeLists.txt  gzread.c  gzwrite.c
(+1574 files in other folders)
